cmake_minimum_required(VERSION 3.27)
project(leetcode_learning)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(leetcode_learning main.cpp)

add_executable(example example.cpp)

# String
add_executable(longest-common-prefix longest-common-prefix.cpp)
add_executable(reverse-string reverse-string.cpp)
add_executable(repeated-substring-pattern repeated-substring-pattern.cpp)

#Greed
add_executable(jump-game jump-game.cpp)
add_executable(jump-game-ii jump-game-ii.cpp)
add_executable(jump-game-vi jump-game-vi.cpp)
add_executable(assign-cookies assign-cookies.cpp)
add_executable(wiggle-subsequence wiggle-subsequence.cpp)
add_executable(wiggle-sort-ii wiggle-sort-ii.cpp)
add_executable(array-partition array-partition.cpp)
add_executable(valid-palindrome-ii valid-palindrome-ii.cpp)
add_executable(remove-k-digits remove-k-digits.cpp)
add_executable(reorganize-string reorganize-string.cpp)
add_executable(dota2-senate dota2-senate.cpp)

# Array
add_executable(merge-sorted-array merge-sorted-array.cpp)
add_executable(remove-element remove-element.cpp)
add_executable(squares-of-a-sorted-array squares-of-a-sorted-array.cpp)
add_executable(gas-station gas-station.cpp)
add_executable(length-of-last-word length-of-last-word.cpp)
add_executable(roman-to-integer roman-to-integer.cpp)
add_executable(integer-to-roman integer-to-roman.cpp)
add_executable(rotate-array rotate-array.cpp)
add_executable(product-of-array-except-self product-of-array-except-self.cpp)
add_executable(reverse-words-in-a-string reverse-words-in-a-string.cpp)
add_executable(find-the-index-of-the-first-occurrence-in-a-string find-the-index-of-the-first-occurrence-in-a-string.cpp)
add_executable(intersection-of-two-arrays intersection-of-two-arrays.cpp)
add_executable(intersection-of-two-arrays-ii intersection-of-two-arrays-ii.cpp)
add_executable(remove-duplicates-from-sorted-array remove-duplicates-from-sorted-array.cpp)
add_executable(remove-duplicates-from-sorted-array-ii remove-duplicates-from-sorted-array-ii.cpp)
add_executable(zigzag-conversion zigzag-conversion.cpp)
add_executable(move-zeroes move-zeroes.cpp)
add_executable(sort-an-array sort-an-array.cpp)
add_executable(find-the-power-of-k-size-subarrays-i find-the-power-of-k-size-subarrays-i.cpp)
add_executable(snapshot-array snapshot-array.cpp)

# Matrix
add_executable(spiral-matrix spiral-matrix.cpp)
add_executable(spiral-matrix-ii spiral-matrix-ii.cpp)
add_executable(set-matrix-zeroes set-matrix-zeroes.cpp)
add_executable(rotate-image rotate-image.cpp)

# Tree
add_executable(maximum-depth-of-binary-tree maximum-depth-of-binary-tree.cpp)
add_executable(minimum-depth-of-binary-tree minimum-depth-of-binary-tree.cpp)
add_executable(same-tree same-tree.cpp)
add_executable(path-sum path-sum.cpp)
add_executable(invert-binary-tree invert-binary-tree.cpp)
add_executable(symmetric-tree symmetric-tree.cpp)
add_executable(binary-tree-preorder-traversal binary-tree-preorder-traversal.cpp)
add_executable(binary-tree-inorder-traversal binary-tree-inorder-traversal.cpp)
add_executable(binary-tree-postorder-traversal binary-tree-postorder-traversal.cpp)
add_executable(binary-tree-level-order-traversal binary-tree-level-order-traversal.cpp)
add_executable(binary-tree-level-order-traversal-ii binary-tree-level-order-traversal-ii.cpp)
add_executable(binary-tree-right-side-view binary-tree-right-side-view.cpp)
add_executable(average-of-levels-in-binary-tree average-of-levels-in-binary-tree.cpp)
add_executable(n-ary-tree-level-order-traversal n-ary-tree-level-order-traversal.cpp)
add_executable(find-largest-value-in-each-tree-row find-largest-value-in-each-tree-row.cpp)
add_executable(binary-tree-zigzag-level-order-traversal binary-tree-zigzag-level-order-traversal.cpp)
add_executable(populating-next-right-pointers-in-each-node populating-next-right-pointers-in-each-node.cpp)
add_executable(populating-next-right-pointers-in-each-node-ii populating-next-right-pointers-in-each-node-ii.cpp)
add_executable(minimum-absolute-difference-in-bst minimum-absolute-difference-in-bst.cpp)
add_executable(kth-smallest-element-in-a-bst kth-smallest-element-in-a-bst.cpp)
add_executable(validate-binary-search-tree validate-binary-search-tree.cpp)
add_executable(count-complete-tree-nodes count-complete-tree-nodes.cpp)
add_executable(sum-root-to-leaf-numbers sum-root-to-leaf-numbers.cpp)
add_executable(flatten-binary-tree-to-linked-list flatten-binary-tree-to-linked-list.cpp)
add_executable(convert-sorted-array-to-binary-search-tree convert-sorted-array-to-binary-search-tree.cpp)
add_executable(binary-tree-maximum-path-sum binary-tree-maximum-path-sum.cpp)
add_executable(cousins-in-binary-tree-ii cousins-in-binary-tree-ii.cpp)
add_executable(lowest-common-ancestor-of-a-binary-tree lowest-common-ancestor-of-a-binary-tree.cpp)
add_executable(balanced-binary-tree balanced-binary-tree.cpp)
add_executable(binary-search-tree-iterator binary-search-tree-iterator.cpp)
add_executable(unique-binary-search-trees unique-binary-search-trees.cpp)
add_executable(unique-binary-search-trees-ii unique-binary-search-trees-ii.cpp)
add_executable(n-ary-tree-preorder-traversal n-ary-tree-preorder-traversal.cpp)
add_executable(n-ary-tree-postorder-traversal n-ary-tree-postorder-traversal.cpp)
add_executable(subtree-of-another-tree subtree-of-another-tree.cpp)
add_executable(maximum-depth-of-n-ary-tree maximum-depth-of-n-ary-tree.cpp)
add_executable(binary-tree-paths binary-tree-paths.cpp)
add_executable(sum-of-left-leaves sum-of-left-leaves.cpp)
add_executable(maximum-binary-tree maximum-binary-tree.cpp)
add_executable(reverse-vowels-of-a-string reverse-vowels-of-a-string.cpp)
add_executable(construct-binary-tree-from-preorder-and-inorder-traversal construct-binary-tree-from-preorder-and-inorder-traversal.cpp)
add_executable(construct-binary-tree-from-inorder-and-postorder-traversal construct-binary-tree-from-inorder-and-postorder-traversal.cpp)
add_executable(construct-binary-tree-from-preorder-and-postorder-traversal construct-binary-tree-from-preorder-and-postorder-traversal.cpp)
add_executable(construct-quad-tree construct-quad-tree.cpp)
add_executable(convert-bst-to-greater-tree convert-bst-to-greater-tree.cpp)
add_executable(trim-a-binary-search-tree trim-a-binary-search-tree.cpp)
add_executable(convert-sorted-list-to-binary-search-tree convert-sorted-list-to-binary-search-tree.cpp)
add_executable(two-sum-iv-input-is-a-bst two-sum-iv-input-is-a-bst.cpp)
add_executable(lowest-common-ancestor-of-a-binary-search-tree lowest-common-ancestor-of-a-binary-search-tree.cpp)
add_executable(delete-node-in-a-bst delete-node-in-a-bst.cpp)
add_executable(merge-two-binary-trees merge-two-binary-trees.cpp)

# BackTracking
add_executable(combinations combinations.cpp)
add_executable(n-queens n-queens.cpp)
add_executable(n-queens-ii n-queens-ii.cpp)
add_executable(permutations permutations.cpp)
add_executable(permutations-ii permutations-ii.cpp)
add_executable(letter-combinations-of-a-phone-number letter-combinations-of-a-phone-number.cpp)
add_executable(combination-sum combination-sum.cpp)
add_executable(combination-sum-ii combination-sum-ii.cpp)
add_executable(combination-sum-iii combination-sum-iii.cpp)
add_executable(combination-sum-iv combination-sum-iv.cpp)
add_executable(word-search word-search.cpp)
add_executable(generate-parentheses generate-parentheses.cpp)
add_executable(non-decreasing-subsequences non-decreasing-subsequences.cpp)
add_executable(subsets subsets.cpp)
add_executable(subsets-ii subsets-ii.cpp)
add_executable(gray-code gray-code.cpp)
add_executable(path-sum-ii path-sum-ii.cpp)
add_executable(path-sum-iii path-sum-iii.cpp)

# Double Pointer
add_executable(valid-palindrome valid-palindrome.cpp)
add_executable(is-subsequence is-subsequence.cpp)
add_executable(3sum 3sum.cpp)
add_executable(3sum-closest 3sum-closest.cpp)
add_executable(two-sum-ii-input-array-is-sorted two-sum-ii-input-array-is-sorted.cpp)
add_executable(container-with-most-water container-with-most-water.cpp)
add_executable(longest-consecutive-sequence longest-consecutive-sequence.cpp)

# DP
add_executable(climbing-stairs climbing-stairs.cpp)
add_executable(fibonacci-number fibonacci-number.cpp)
add_executable(pascals-triangle pascals-triangle.cpp)
add_executable(pascals-triangle-ii pascals-triangle-ii.cpp)
add_executable(min-cost-climbing-stairs min-cost-climbing-stairs.cpp)
add_executable(unique-paths unique-paths.cpp)
add_executable(unique-paths-ii unique-paths-ii.cpp)
add_executable(integer-break integer-break.cpp)
add_executable(coin-change coin-change.cpp)
add_executable(coin-change-ii coin-change-ii.cpp)
add_executable(longest-increasing-subsequence longest-increasing-subsequence.cpp)
add_executable(minimum-falling-path-sum minimum-falling-path-sum.cpp)
add_executable(edit-distance edit-distance.cpp)
add_executable(delete-operation-for-two-strings delete-operation-for-two-strings.cpp)
add_executable(distinct-subsequences distinct-subsequences.cpp)
add_executable(maximum-subarray maximum-subarray.cpp)
add_executable(longest-common-subsequence longest-common-subsequence.cpp)
add_executable(target-sum target-sum.cpp)
add_executable(house-robber house-robber.cpp)
add_executable(house-robber-ii house-robber-ii.cpp)
add_executable(house-robber-iii house-robber-iii.cpp)
add_executable(word-break word-break.cpp)
add_executable(best-time-to-buy-and-sell-stock best-time-to-buy-and-sell-stock.cpp)
add_executable(best-time-to-buy-and-sell-stock-ii best-time-to-buy-and-sell-stock-ii.cpp)
add_executable(best-time-to-buy-and-sell-stock-iii best-time-to-buy-and-sell-stock-iii.cpp)
add_executable(best-time-to-buy-and-sell-stock-iv best-time-to-buy-and-sell-stock-iv.cpp)
add_executable(best-time-to-buy-and-sell-stock-with-cooldown best-time-to-buy-and-sell-stock-with-cooldown.cpp)
add_executable(minimum-path-sum minimum-path-sum.cpp)
add_executable(game-of-life game-of-life.cpp)
add_executable(triangle triangle.cpp)
add_executable(n-th-tribonacci-number n-th-tribonacci-number.cpp)
add_executable(counting-bits counting-bits.cpp)
add_executable(perfect-squares perfect-squares.cpp)
add_executable(longest-palindromic-substring longest-palindromic-substring.cpp)
add_executable(maximal-square maximal-square.cpp)
add_executable(palindrome-partitioning palindrome-partitioning.cpp)
add_executable(palindromic-substrings palindromic-substrings.cpp)
add_executable(longest-palindromic-subsequence longest-palindromic-subsequence.cpp)
add_executable(longest-continuous-increasing-subsequence longest-continuous-increasing-subsequence.cpp)
add_executable(maximum-length-of-repeated-subarray maximum-length-of-repeated-subarray.cpp)
add_executable(maximum-product-subarray maximum-product-subarray.cpp)
add_executable(knight-probability-in-chessboard knight-probability-in-chessboard.cpp)
add_executable(partition-equal-subset-sum partition-equal-subset-sum.cpp)
add_executable(interleaving-string interleaving-string.cpp)
add_executable(count-the-number-of-fair-pairs count-the-number-of-fair-pairs.cpp)
add_executable(different-ways-to-add-parentheses different-ways-to-add-parentheses.cpp)
add_executable(longest-arithmetic-subsequence-of-given-difference longest-arithmetic-subsequence-of-given-difference.cpp)
add_executable(destroy-sequential-targets destroy-sequential-targets.cpp)
add_executable(number-of-longest-increasing-subsequence number-of-longest-increasing-subsequence.cpp)

# 0-1 Package


# Stack
add_executable(valid-parentheses valid-parentheses.cpp)
add_executable(simplify-path simplify-path.cpp)
add_executable(valid-parenthesis-string valid-parenthesis-string.cpp)
add_executable(implement-stack-using-queues implement-stack-using-queues.cpp)
add_executable(implement-queue-using-stacks implement-queue-using-stacks.cpp)
add_executable(next-greater-element-i next-greater-element-i.cpp)
add_executable(next-greater-element-ii next-greater-element-ii.cpp)
add_executable(next-greater-element-iii next-greater-element-iii.cpp)
add_executable(min-stack min-stack.cpp)
add_executable(evaluate-reverse-polish-notation evaluate-reverse-polish-notation.cpp)
add_executable(trapping-rain-water trapping-rain-water.cpp)
add_executable(longest-valid-parentheses longest-valid-parentheses.cpp)
add_executable(basic-calculator-ii basic-calculator-ii.cpp)

# Queue
add_executable(design-circular-queue design-circular-queue.cpp)
add_executable(design-circular-deque design-circular-deque.cpp)
add_executable(number-of-students-unable-to-eat-lunch number-of-students-unable-to-eat-lunch.cpp)
add_executable(top-k-frequent-elements top-k-frequent-elements.cpp)
add_executable(queue-reconstruction-by-height queue-reconstruction-by-height.cpp)

# Hash Table
add_executable(ransom-note ransom-note.cpp)
add_executable(isomorphic-strings isomorphic-strings.cpp)
add_executable(word-pattern word-pattern.cpp)
add_executable(two-sum two-sum.cpp)
add_executable(happy-number happy-number.cpp)
add_executable(valid-anagram valid-anagram.cpp)
add_executable(contains-duplicate-ii contains-duplicate-ii.cpp)
add_executable(group-anagrams group-anagrams.cpp)
add_executable(4sum-ii 4sum-ii.cpp)
add_executable(majority-element majority-element.cpp)
add_executable(majority-element-ii majority-element-ii.cpp)
add_executable(clone-graph clone-graph.cpp)


# Range
add_executable(summary-ranges summary-ranges.cpp)

# Bit
add_executable(add-binary add-binary.cpp)
add_executable(reverse-bits reverse-bits.cpp)
add_executable(number-of-1-bits number-of-1-bits.cpp)
add_executable(single-number single-number.cpp)
add_executable(single-number-ii single-number-ii.cpp)
add_executable(bitwise-and-of-numbers-range bitwise-and-of-numbers-range.cpp)

# Linked List
add_executable(linked-list-cycle linked-list-cycle.cpp)
add_executable(linked-list-cycle-ii linked-list-cycle-ii.cpp)
add_executable(merge-two-sorted-lists merge-two-sorted-lists.cpp)
add_executable(partition-list partition-list.cpp)
add_executable(add-two-numbers add-two-numbers.cpp)
add_executable(merge-k-sorted-lists merge-k-sorted-lists.cpp)
add_executable(kth-node-from-end-of-list-lcci kth-node-from-end-of-list-lcci.cpp)
add_executable(remove-nth-node-from-end-of-list remove-nth-node-from-end-of-list.cpp)
add_executable(middle-of-the-linked-list middle-of-the-linked-list.cpp)
add_executable(intersection-of-two-linked-lists intersection-of-two-linked-lists.cpp)
add_executable(swap-nodes-in-pairs swap-nodes-in-pairs.cpp)
add_executable(palindrome-linked-list palindrome-linked-list.cpp)
add_executable(reverse-linked-list reverse-linked-list.cpp)
add_executable(reverse-linked-list-ii reverse-linked-list-ii.cpp)
add_executable(lru-cache lru-cache.cpp)
add_executable(reverse-nodes-in-k-group reverse-nodes-in-k-group.cpp)
add_executable(copy-list-with-random-pointer copy-list-with-random-pointer.cpp)
add_executable(remove-duplicates-from-sorted-list remove-duplicates-from-sorted-list.cpp)
add_executable(remove-duplicates-from-sorted-list-ii remove-duplicates-from-sorted-list-ii.cpp)
add_executable(rotate-list rotate-list.cpp)
add_executable(reverse-string-ii reverse-string-ii.cpp)
add_executable(sort-list sort-list.cpp)
add_executable(reorder-list reorder-list.cpp)
add_executable(odd-even-linked-list odd-even-linked-list.cpp)


# Heap
add_executable(kth-largest-element-in-an-array kth-largest-element-in-an-array.cpp)
add_executable(find-k-pairs-with-smallest-sums find-k-pairs-with-smallest-sums.cpp)
add_executable(find-k-th-smallest-pair-distance find-k-th-smallest-pair-distance.cpp)
add_executable(longest-happy-string longest-happy-string.cpp)
add_executable(kth-smallest-element-in-a-sorted-matrix kth-smallest-element-in-a-sorted-matrix.cpp)

# Binary Search
add_executable(sqrtx sqrtx.cpp)
add_executable(rotated-digits rotated-digits.cpp)
add_executable(binary-search binary-search.cpp)
add_executable(search-insert-position search-insert-position.cpp)
add_executable(find-first-and-last-position-of-element-in-sorted-array find-first-and-last-position-of-element-in-sorted-array.cpp)
add_executable(find-minimum-in-rotated-sorted-array find-minimum-in-rotated-sorted-array.cpp)
add_executable(search-in-rotated-sorted-array search-in-rotated-sorted-array.cpp)
add_executable(search-in-rotated-sorted-array-ii search-in-rotated-sorted-array-ii.cpp)
add_executable(median-of-two-sorted-arrays median-of-two-sorted-arrays.cpp)

# Graph
add_executable(island-perimeter island-perimeter.cpp)
add_executable(number-of-islands number-of-islands.cpp)
add_executable(number-of-closed-islands number-of-closed-islands.cpp)
add_executable(number-of-enclaves number-of-enclaves.cpp)
add_executable(max-area-of-island max-area-of-island.cpp)
add_executable(count-sub-islands count-sub-islands.cpp)
add_executable(all-paths-from-source-to-target all-paths-from-source-to-target.cpp)
add_executable(course-schedule course-schedule.cpp)
add_executable(course-schedule-ii course-schedule-ii.cpp)
add_executable(redundant-connection redundant-connection.cpp)

# Math
add_executable(nim-game nim-game.cpp)
add_executable(palindrome-number palindrome-number.cpp)
add_executable(powx-n powx-n.cpp)
add_executable(reverse-integer reverse-integer.cpp)
add_executable(ugly-number ugly-number.cpp)
add_executable(ugly-number-ii ugly-number-ii.cpp)

# Windowing
add_executable(minimum-window-substring minimum-window-substring.cpp)
add_executable(permutation-in-string permutation-in-string.cpp)
add_executable(find-all-anagrams-in-a-string find-all-anagrams-in-a-string.cpp)
add_executable(longest-substring-without-repeating-characters longest-substring-without-repeating-characters.cpp)
add_executable(minimum-size-subarray-sum minimum-size-subarray-sum.cpp)
add_executable(longest-substring-with-at-least-k-repeating-characters longest-substring-with-at-least-k-repeating-characters.cpp)

# Sudoku
add_executable(valid-sudoku valid-sudoku.cpp)
add_executable(sudoku-solver sudoku-solver.cpp)

# BFS
add_executable(open-the-lock open-the-lock.cpp)

add_executable(next-permutation next-permutation.cpp)

add_executable(factorial-trailing-zeroes factorial-trailing-zeroes.cpp)

add_subdirectory(STL)

add_subdirectory(templates)
add_subdirectory(sort)
add_subdirectory(search)